Working on the layout

--- a/css/customStyle.css
+++ b/css/customStyle.css
@@ -2,3 +2,6 @@
   background: url("../images/background.jpg");
   background-position: center;
   background-repeat: no-repeat; }
+
+.card-header, #cerf img {
+  cursor: pointer; }
