upgrading the skill info with years of expirience

--- a/css/customStyle.css
+++ b/css/customStyle.css
@@ -5,3 +5,10 @@
 
 .card-header, #cerf img {
   cursor: pointer; }
+
+.header-menu {
+    position: fixed;
+    width: 100%;
+    z-index: 999;
+    top: 0;
+}
