--- a/css/customStyle.css
+++ b/css/customStyle.css
@@ -3,6 +3,10 @@
   background-position: center;
   background-repeat: no-repeat; }
 
+  #italic {
+    font-style: italic;
+  }
+
 .card-header, #cerf img {
   cursor: pointer; }
 
@@ -19,8 +23,4 @@
 
 bold-text {
   font-weight: bold;
-}
-
-.italic-text {
-  font-style: italic;
 }
